--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -30,7 +30,7 @@
                 class="px-4 py-2 rounded-lg bg-gray-100 text-gray-700 font-semibold hover:bg-gray-900 hover:text-white transition-all duration-300">
                 GitHub
             </a>
-            <a href="#"
+            <a href="https://www.linkedin.com/in/ansh-panwar-8a7029205/"
                 class="px-4 py-2 rounded-lg bg-gray-100 text-gray-700 font-semibold hover:bg-gray-900 hover:text-white transition-all duration-300">
                 LinkedIn
             </a>
